# nclex311-web

./: .env.example  .gitignore  HANDOFF_NGROK_TESTING.md  README.md  RESTRUCTURE_SUMMARY.md  TESTING_SUMMARY_STORY_2.1.md  package-lock.json  package.json
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/docs/: image_extraction_report.md  pdf_image_extraction_README.md  research_pdf_extraction_alternatives.md
python/final_output/: book_page_016.json  book_page_018.json  book_page_020.json  book_page_021.json  book_page_022.json  book_page_023.json  book_page_024.json  book_page_025.json  book_page_026.json  book_page_027.json  book_page_028.json  book_page_029.json  book_page_030.json  book_page_031.json  book_page_032.json  book_page_033.json  book_page_034.json  book_page_035.json  book_page_036.json  book_page_037.json  book_page_038.json  book_page_039.json  book_page_040.json  book_page_041.json  book_page_042.json  book_page_043.json  book_page_044.json  book_page_045.json  book_page_046.json  book_page_047.json  book_page_050.json  book_page_051.json  book_page_052.json  book_page_053.json  book_page_054.json  book_page_055.json  book_page_056.json  book_page_057.json  book_page_058.json  book_page_059.json  (+274 more)
python/prompts/: nclex_extraction_agent_prompt.md  nclex_extraction_agent_v3_prompt.md  nclex_extraction_agent_v4_prompt.md
python/python/: CLI_TOOLS_STATUS.md
python/scripts/: PDF_LAYOUT_NOTES.md  analyze_extracted_images.py  analyze_page_cli.py  debug_image_extraction.py  enhanced_image_extraction.py  extract_images_cli.py  (+5 more)
(+326 files in other folders)
