[project]
name = "nclex311-bmad"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "unstructured[pdf]>=0.15.0",
    "pillow>=10.0.0",
]
